# csci3311

./: .gitignore  main.py  pyproject.toml
.cursor/rules/: common.mdc  project-description.mdc
.devcontainer/: devcontainer.json
antibiotic/: README.md  antibiotic_app.py  antibiotic_utils.py
antibiotic/pages/: 01_introduction.py  02_data_exploration.py  03_antibiotic_effectiveness.py  04_gram_staining_analysis.py  05_outliers_exceptions.py  06_summary_recommendations.py
streamlit/: sf_airbnb_listing.py
termproject/: OUTLINE.md  PRINCIPLE.md  config.toml
termproject/src/: college_affordability_app.py  collegescore.py  data.py  notebook.ipynb  visuals.py
