[project]
name = "csci3311"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair[all]>=5.5.0",
    "ipykernel>=6.29.5",
    "jupyter-collaboration==4.0.2",
    "jupyterlab==4.4.1",
    "marimo>=0.13.15",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "vegafusion[embed]>=1.5.0",
]
