[project]
name = "csci3311"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair-tiles>=0.4.0",
    "altair[all]>=5.5.0",
    "geopandas>=1.1.0",
    "ipykernel>=6.29.5",
    "jupyter-collaboration==4.0.2",
    "jupyterlab==4.4.1",
    "marimo>=0.13.15",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "shapely>=2.1.1",
    "streamlit>=1.45.1",
    "streamlit-shadcn-ui>=0.1.18",
    "vegafusion[embed]>=1.5.0",
    "watchdog>=6.0.0",
]
